MusicStore/deployment/Azure/aks_ingress_template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: musicstore
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: musicstore.<CLUSTER_SPECIFIC_DNS_ZONE>
    http:
      paths:
      - backend:
          serviceName: musicstore
          servicePort: 80
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eurekaserver
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: eureka.<CLUSTER_SPECIFIC_DNS_ZONE>
    http:
      paths:
      - backend:
          serviceName: eurekaserver
          servicePort: 8761
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-boot-admin
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: admin.<CLUSTER_SPECIFIC_DNS_ZONE>
    http:
      paths:
      - backend:
          serviceName: spring-boot-admin
          servicePort: 8080
        path: /
